# android_deploy_client

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  configure_windows.bat  deploy_config.json
android/emulators/: CMakeLists.txt  main.cpp
android/emulators/dumpsys/: CMakeLists.txt  activity#services#com.mplore.updateservice.info  activity#services#com.mplore.updateservice.norunning.info  package#com.mplore.updateservice.info
android/emulators/getprop/: CMakeLists.txt  ro.product.device.info  ro.product.manufacturer.info  ro.product.model.info  ro.serialno.info
android/emulators/pm/: CMakeLists.txt  list#packages.info
android/emulators/service/: CMakeLists.txt  call#iphonesubinfo#1.info
android/emulators/settings/: CMakeLists.txt  get#secure#android_id.info
jni/mml/: CMakeLists.txt
jni/mml/base64/: CMakeLists.txt
jni/mml/base64/include/: mml_base64_uuids.h
jni/mml/base64/source/: mmlBase64InputStream.cpp  mmlBase64InputStream.h  mmlBase64OutputStream.cpp  mmlBase64OutputStream.h  mml_base64.cpp
jni/mml/bridge/: CMakeLists.txt
jni/mml/bridge/include/: mmlIBridgeStreamServer.h
jni/mml/bridge/source/: mmlBridgeStreamServer.cpp  mmlBridgeStreamServer.h  mml_bridge.cpp
jni/mml/core/: CMakeLists.txt  mml.cmake
jni/mml/core/include/: mmlIBuffer.h  mmlICString.h  mmlICStringStream.h  mmlICStringUtils.h  mmlICommandLine.h  mmlICondition.h  mmlIEvent.h  mmlIFileSystem.h  mmlIList.h  mmlILogger.h  mmlIMemoryBufferedQueue.h  mmlIMemoryStream.h  mmlIMutex.h  mmlIObject.h  mmlIObjectQueue.h  mmlIPerformanceCounter.h  mmlIProperties.h  mmlIRandom.h  mmlIService.h  mmlISleep.h  mmlIStateMachine.h  mmlIStream.h  mmlIStreamHash.h  mmlIThread.h  mmlITimer.h  mmlIVariant.h  mmlPtr.h  mml_atomic.h  mml_components.h  mml_core.h  mml_library.h  mml_memory.h  mml_services.h  mml_strutils.h  mml_time.h
jni/mml/core/sources/: mmlBuffer.cpp  mmlBufferedStream.cpp  mmlBufferedStream.h  mmlCString.cpp  mmlCString.h  mmlCStringStream.cpp  mmlCStringStream.h  mmlCStringUtils.cpp  mmlCStringUtils.h  mmlCommandLine.cpp  mmlCommandLine.h  mmlFileSystem.cpp  mmlFileSystem.h  mmlList.cpp  mmlList.h  mmlLogger.cpp  mmlLogger.h  mmlMemoryBufferedQueue.cpp  mmlMemoryBufferedQueue.h  mmlMemoryStream.cpp  mmlMemoryStream.h  mmlObjectQueue.cpp  mmlObjectQueue.h  mmlStateMachine.cpp  mmlStateMachine.h  mmlStreamCopy.cpp  mmlStreamCopy.h  mmlVariant.cpp  mmlVariant.h  mml_components.cpp  mml_library.cpp  mml_memory.cpp  mml_services.cpp  mml_strutils.cpp  mml_time_common.cpp
jni/mml/core/sources/portable/posix/: mmlComponentLoader.cpp  mmlMutex.h  (+19 more)
jni/mml/crc/: CMakeLists.txt
jni/mml/crc/include/: mml_crc32_uuids.h
jni/mml/crc/source/: mmlCRC32InputStream.cpp  mmlCRC32InputStream.h  mmlCRC32OutputStream.cpp  mmlCRC32OutputStream.h  mml_crc32.cpp  mml_crc32.h
jni/mml/database/: CMakeLists.txt
jni/mml/database/include/: mmlIDatabase.h
jni/mml/database/source/: mmlDatabase.cpp  mmlDatabase.h  mml_database.cpp
jni/mml/gzip/: CMakeLists.txt
jni/mml/gzip/include/: mmlIGZIPInputStream.h  mmlIGZIPOutputStream.h  mmlIZIPFileSystem.h
jni/mml/gzip/source/: mmlGZIPInputStream.cpp  mmlGZIPInputStream.h  mmlGZIPOutputStream.cpp  mmlGZIPOutputStream.h  mml_gzip.cpp
jni/mml/gzip/source/zlib/: CMakeLists.txt
jni/mml/http/: CMakeLists.txt
jni/mml/http/include/: mmlIHTTPClient.h  mmlIHTTPRequest.h  mmlIHTTPResponse.h  mmlIHTTPServer.h
jni/mml/http/source/: mmlHTTPClient.cpp  mmlHTTPClient.h  mmlHTTPRequest.cpp  mmlHTTPRequest.h  mmlHTTPResponse.cpp  mmlHTTPResponse.h  mmlHTTPServer.cpp  mmlHTTPServer.h  mmlHTTPUtils.cpp  mmlHTTPUtils.h  mml_http.cpp
jni/mml/md5/: CMakeLists.txt
jni/mml/md5/include/: mml_md5_uuids.h
jni/mml/md5/md5/: md5.c  md5.h  md5global.h
jni/mml/md5/source/: mmlMD5InputStream.cpp  mmlMD5InputStream.h  mmlMD5OutputStream.cpp  mmlMD5OutputStream.h  mml_md5.cpp
jni/mml/network/: CMakeLists.txt
jni/mml/network/include/: mmlINetworkStreamClient.h  mmlINetworkStreamClientSSL.h  mmlINetworkStreamServer.h  mmlINetworkStreamServerSSL.h
jni/mml/network/source/: mmlNetworkCommon.cpp  mmlNetworkCommon.h  mmlNetworkStreamClient.cpp  mmlNetworkStreamClient.h  mmlNetworkStreamClientSSL.cpp  mmlNetworkStreamClientSSL.h  mmlNetworkStreamServer.cpp  mmlNetworkStreamServer.h  mmlNetworkStreamServerSSL.cpp  mmlNetworkStreamServerSSL.h  mml_network.cpp
jni/mml/process/: CMakeLists.txt
jni/mml/process/include/: mmlIProcess.h
jni/mml/process/source/: mmlProcess.cpp  mmlProcess.h  mml_process.cpp
jni/mml/regexp/: CMakeLists.txt
jni/mml/regexp/include/: mmlIRegexp.h
jni/mml/regexp/pcre/: CMakeLists.txt  config.h  pcre.h  pcre_internal.h  pcrecpp_internal.h
jni/mml/regexp/source/: mmlRegexp.cpp  mmlRegexp.h  mml_regexp.cpp
jni/mml/rpc/: CMakeLists.txt
jni/mml/rpc/include/: mmlIRCPServer.h
jni/mml/rpc/source/: mmlRPCServer.cpp  mmlRPCServer.h  mml_rpc.cpp
jni/mml/scheduler/: CMakeLists.txt
jni/mml/scheduler/include/: mmlIScheduler.h
jni/mml/scheduler/source/: mmlScheduler.cpp  mmlScheduler.h
jni/mml/serialization/: CMakeLists.txt
jni/mml/serialization/binary/: CMakeLists.txt  mmlBinaryDeserializer.cpp  mmlBinaryDeserializer.h  mmlBinarySerializer.cpp  mmlBinarySerializer.h  mml_binary_serialization.cpp
jni/mml/serialization/include/: mmlIVariantDeserializer.h  mmlIVariantSerializer.h
jni/mml/serialization/json/: CMakeLists.txt  mmlJSONDeserializer.cpp  mmlJSONDeserializer.h  mmlJSONSerializer.cpp  mmlJSONSerializer.h  mml_json_serialization.cpp
jni/mml/sha1/: CMakeLists.txt
jni/mml/sha1/include/: mml_sha1_uuids.h
jni/mml/sha1/source/: mmlSHA1InputStream.cpp  mmlSHA1InputStream.h  mmlSHA1OutputStream.cpp  mmlSHA1OutputStream.h  mml_sha1.cpp
jni/mml/websocket/: CMakeLists.txt
jni/mml/websocket/include/: mmlIWebSocketClient.h
jni/mml/websocket/source/: mmlWebSocketClient.cpp  mmlWebSocketClient.h  mml_websocket.cpp
jni/mml/xml/: CMakeLists.txt
jni/mml/xml/include/: mmlIXMLDocument.h  mmlIXMLNode.h
jni/mml/xml/source/: mmlXMLDocument.cpp  mmlXMLDocument.h  mmlXMLNode.cpp  mmlXMLNode.h  mmlXMLPath.cpp  mmlXMLPath.h  mml_xml_component.cpp
(+52 files in other folders)
