add_subdirectory(thirdparty/mbedtls)
add_subdirectory(thirdparty/sqlite3)
add_subdirectory(core)
add_subdirectory(http)
add_subdirectory(network)
add_subdirectory(xml)
add_subdirectory(gzip)
add_subdirectory(serialization)
add_subdirectory(crc)
add_subdirectory(md5)
add_subdirectory(sha1)
add_subdirectory(base64)
add_subdirectory(process)
add_subdirectory(scheduler)
add_subdirectory(websocket)
add_subdirectory(database)
add_subdirectory(regexp)
add_subdirectory(rpc)
add_subdirectory(bridge)

